[project]
name = "faststep"
version = "0.1.0"
description = ""
authors = [
    {name = "d-yoshioka",email = "d-yoshioka@gr.meitec.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[all] (>=0.119.0,<0.120.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
